# ftl-msa-rmq-out

./: .dockercontainers  .gitignore  .terrahub.yml  Dockerfile  README.md  pyproject.toml  setup.cfg
ftl_msa_rmq_out/msa/: __init__.py  run.py
iac/: aws.global.tf
iac/aws_ecr_repository/: default.tfvars  terraform.tf
iac/aws_eks_node_group/: default.tfvars  terraform.tf
iac/aws_iam_eks_node_group/: default.tfvars  terraform.tf
iac/aws_k8s_deployment/: default.tfvars  locals.tf  main.tf  terraform.tf  variables.tf
iac/aws_k8s_deployment/template/: run.sh.tpl
poetry/: main.py
